--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 requires = ["setuptools >= 50", "setuptools-scm[toml]>=6.2", "wheel"]
 
 [project]
-name = "LFRL"
+name = "calm"
 dynamic = ["version", "dependencies"]
 requires-python = ">=3.8"
 readme = "README.md"
@@ -57,12 +57,12 @@ bug_tracker = "https://github.com/epignatelli/lfrl/issues"
 
 
 [tool.setuptools.dynamic]
-version = {attr = "calf._version.__version__"}
+version = {attr = "calm._version.__version__"}
 dependencies = {file = "./requirements.txt"}
 
 
 [tool.setuptools.packages.find]
-include = ["calf*"]
+include = ["calm*"]
 exclude = ["test", "examples", "experiments"]
 
 
